objects/FieloCH__ChallengeMissionMember__c.object
<CustomObject>
    <fields>
        <fullName>FieloCH__AlternativeKey__c</fullName>
        <description>Key with ChallengeMission Id and Member Id.</description>
        <label>Alternative Key</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloCH__Average__c</fullName>
        <formula>IF( !ISNULL(FieloCH__Summary__c) &amp;&amp; !ISNULL(FieloCH__Counter__c) &amp;&amp; FieloCH__Counter__c != 0 , FieloCH__Summary__c / FieloCH__Counter__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__ChallengeMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChallengeMember</label>
        <referenceTo>FieloCH__ChallengeMember__c</referenceTo>
        <relationshipLabel>Challenges Missions Members</relationshipLabel>
        <relationshipName>ChallengesMissionsMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__ChallengeMission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge Mission</label>
        <referenceTo>FieloCH__ChallengeMission__c</referenceTo>
        <relationshipLabel>Challenge Missions Members</relationshipLabel>
        <relationshipName>ChallengeMissionsMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__MaxValue__c</fullName>
        <label>MaxValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accomplish</fullName>
                </value>
                <value>
                    <fullName>Not Accomplish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Summary__c</fullName>
        <label>Summary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Challenge Mission Member</label>
    <nameField>
        <displayFormat>CHMM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenges Missions Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>